--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,22 +11,43 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: 17
 
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
+      with:
+        api-level: 35
+        build-tools: 35.0.0
+        ndk: false
+
+    - name: Cache Gradle
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug
+    - name: Build Debug APK
+      run: ./gradlew clean :app:assembleDebug --stacktrace
 
-    - name: Upload APK
+    - name: Show outputs tree (debugging)
+      run: ls -R app/build/outputs || true
+
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
         name: NotiSms-debug
-        path: app/build/outputs/apk/debug/
+        path: app/build/outputs/**/*.apk
+        if-no-files-found: error
